--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html, body {
    align-content: center;
    cursor: pointer;
    margin-bottom: 10px;
-   margin-top: 100px;
+   margin-top: 30px;
    transition: 1s;
   }
   .discord-logo:hover{
@@ -70,7 +70,7 @@ html, body {
          border-radius: 100px;
        }
        .rotate-circle {
-         margin-top: 200px;
+         margin-top: 500px;
    width: 200px;
    height: 200px;
    position: relative;
@@ -82,6 +82,10 @@ html, body {
    height: 100%;
    object-fit: cover;
    border-radius: 50%;
+}
+.tiktok-logo{
+width: 200px;
+border-radius: 10px;
 }
 
 @keyframes rotate {
