--- a/style.css
+++ b/style.css
@@ -1,115 +1,180 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+*, *::before, *::after {
+    padding: 0;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
-    color: #ffffff;
+    scroll-behavior: smooth;
 }
 
-#container {
+body {
+    background-color: #121212; /* Dark background color */
+    color: #ffffff; /* Light text color */
+    font-family: "Poppins", sans-serif;
+}
+
+/* Nav Bar */
+
+header nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 40px;
+    animation: fadeInDown .8s;
+}
+
+header nav .header_links ul {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+header nav .header_links ul li, section.main ul li {
+    list-style-type: none;
+}
+
+header nav .header_links ul li a {
+    outline: none;
+    text-decoration: none;
+    color: #a6a8b8;
+    padding: 5px 12px;
+    transition: 0.3s all;
+    font-size: 15px;
+}
+
+header nav .header_links ul li a:hover {
+    color: white;
+}
+
+header nav .header_logo img {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    object-fit: cover;
+    border: 5px solid #3b3d4e93;
+    cursor: pointer;
+}
+
+/* Responsive nav bar */
+
+@media only screen and (max-width: 630px) {
+    header nav {
+        display: flex;
+        flex-direction: column;
+    }
+    header nav .header_logo {
+        margin-bottom: 20px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    header nav .header_links ul {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+}
+
+/* Main */
+
+section.main {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('https://images5.alphacoders.com/127/1279076.png') center/cover no-repeat;
+    text-align: center;
+    min-height: 70vh;
+    animation: fadeInUp .8s;
 }
 
-#top-name {
-    font-family: 'Pacifico', cursive;
-    font-size: 48px;
-    font-weight: bold;
+section.main img {
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    object-fit: cover;
+    border: 10px solid #21222b93;
+    cursor: pointer;
     margin-bottom: 10px;
-    text-transform: uppercase;
-    padding: 10px;
-    animation: changeColor 10s infinite; /* Adjust the animation duration as needed */
 }
 
-@keyframes changeColor {
-    0% { color: #570753a1; }
-    25% { color: #ff00b3; }
-    50% { color: #f01313; }
-    75% { color: #fb98f6; }
-    100% { color: #dda0dd; }
+section.main span {
+    color: #fffffe;
+    font-size: 30px;
+    font-weight: bold;
 }
 
-#image-container {
-    margin: 25px 0;
+section.main p {
     position: relative;
-}
-
-#image-container img {
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 50%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-
-.border {
-    position: absolute;
-    top: -5px;
-    left: -5px;
-    right: -5px;
-    bottom: -1px;
-    border: 5px solid transparent;
-    border-radius: 50%;
-    animation: moveBorder 5s linear infinite;
-}
-
-@keyframes moveBorder {
-    0% { border-color: #e1306c; }
-    25% { border-color: #61dafb; }
-    50% { border-color: #ff00c8; }
-    75% { border-color: #ff006a; }
-    100% { border-color: #dda0dd; }
-}
-
-#social-icons {
-    display: flex;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+    top: 50%;
+    border-right: 2px solid rgba(255, 255, 255, 0.75);
+    white-space: nowrap;
     overflow: hidden;
-    transition: transform 0.3s ease;
+    color: #94a1b2;
+    font-size: 13px;
+    animation: typewriter 4s steps(49) 1s 1 normal both, blinkTextCursor 530ms steps(49) infinite normal;
 }
 
-.icon img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+section.main ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
-.icon:hover {
-    transform: scale(1.2);
+section.main ul li a {
+    color: #a6a8b8;
+    display: flex;
+    text-decoration: none;
+    margin: 20px 5px;
+    font-size: 25px;
+    padding: 5px;
+    transition: 0.2s all;
 }
 
-#instagram {
-    background-color: #e1306c;
+section.main ul li a:hover {
+    transition: 0.2s all;
+    color: #fff;
 }
 
-#tiktok {
-    background-color: #ffffff;
-    color: #000;
+@keyframes typewriter {
+    from {
+        width: 0;
+    }
+    to {
+        width: 21.5em;
+    }
 }
 
-#discord {
-    background-color: #5865f2;
+@keyframes blinkTextCursor {
+    from {
+        border-right-color: rgba(255, 255, 255, .75);
+    }
+    to {
+        border-right-color: transparent;
+    }
 }
 
-#snapchat {
-    background-color: #fffc00;
+@keyframes fadeInUp {
+    from {
+        transform: translate3d(0, 150px, 0)
+    }
+    to {
+        transform: translate3d(0, 0, 0);
+        opacity: 1
+    }
 }
 
-#bottom-text {
-    font-family:'Pacifico', cursive;
-    font-size: 24px;
-    margin-top: 20px;
-    
-}
-#telegram {
-    background-color: #0088cc; /* Telegram blue color */
+@keyframes fadeInDown {
+    from {
+        transform: translate3d(0, -150px, 0)
+    }
+    to {
+        transform: translate3d(0, 0, 0);
+        opacity: 1
+    }
 }
